[Docs] 모든 intellij 설정 파일을 무시하도록 gitignore 수정

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Ignore all editor configuration files
+.idea/
+
 
 # Created by https://www.toptal.com/developers/gitignore/api/java,intellij+iml
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,intellij+iml
